# src/main/kotlin/uk/gov/justice/digital/hmpps/supportadditionalneedsapi/domain/entity/ChallengeEntity.kt
@@ -1,0 +1,66 @@
+package uk.gov.justice.digital.hmpps.supportadditionalneedsapi.domain.entity
+
+import jakarta.persistence.Column
+import jakarta.persistence.Entity
+import jakarta.persistence.EntityListeners
+import jakarta.persistence.GeneratedValue
+import jakarta.persistence.Id
+import jakarta.persistence.JoinColumn
+import jakarta.persistence.ManyToOne
+import jakarta.persistence.Table
+import org.hibernate.annotations.CreationTimestamp
+import org.hibernate.annotations.UpdateTimestamp
+import org.hibernate.annotations.UuidGenerator
+import org.springframework.data.annotation.CreatedBy
+import org.springframework.data.annotation.LastModifiedBy
+import org.springframework.data.jpa.domain.support.AuditingEntityListener
+import java.time.Instant
+import java.util.UUID
+
+@Entity
+@EntityListeners(value = [AuditingEntityListener::class])
+@Table(name = "challenge")
+data class ChallengeEntity(
+  @Column(updatable = false)
+  val reference: UUID = UUID.randomUUID(),
+
+  @Column(updatable = false)
+  val prisonNumber: String,
+
+  @Column(name = "from_aln_screener", nullable = false)
+  var fromALNScreener: Boolean = false,
+
+  @ManyToOne(optional = false)
+  @JoinColumn(name = "challenge_type_id", referencedColumnName = "id")
+  val challengeType: ReferenceDataEntity,
+
+  @Column(nullable = false)
+  var active: Boolean = true,
+
+  @Column(updatable = false)
+  val createdAtPrison: String,
+
+  @Column
+  var updatedAtPrison: String,
+) {
+  @Id
+  @GeneratedValue
+  @UuidGenerator
+  var id: UUID? = null
+
+  @Column(updatable = false)
+  @CreatedBy
+  var createdBy: String? = null
+
+  @Column(updatable = false)
+  @CreationTimestamp
+  var createdAt: Instant? = null
+
+  @Column
+  @LastModifiedBy
+  var updatedBy: String? = null
+
+  @Column
+  @UpdateTimestamp
+  var updatedAt: Instant? = null
+}
